manifests/dapr-1.13.4.tgz-manifest.yaml
---
# Source: dapr/charts/dapr_operator/templates/dapr_operator_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dapr-api
  namespace: default
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  selector:
    app: dapr-operator
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 443
    targetPort: 6500
    name: grpc
# Added for backwards compatibility where previous clients will attempt to
# connect on port 80.
# TOOD: @joshvanl: remove in v1.14

  - protocol: TCP
    port: 80
    targetPort: 6500
    name: legacy
---
# Source: dapr/charts/dapr_operator/templates/dapr_operator_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dapr-webhook
  namespace: default
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 19443
    protocol: TCP
  selector:
    app: dapr-operator
---
# Source: dapr/charts/dapr_placement/templates/dapr_placement_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dapr-placement-server
  namespace: default
  labels:
    app: dapr-placement-server
    app.kubernetes.io/component: placement
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  selector:
    app: dapr-placement-server
  # placement must be able to resolve pod address to join initial cluster peers
  # before POD is ready
  publishNotReadyAddresses: true
  ports:
  - name: api
    port: 50005
  - name: raft-node
    port: 8201
  clusterIP: None
---
# Source: dapr/charts/dapr_sentry/templates/dapr_sentry_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dapr-sentry
  namespace: default
  labels:
    app.kubernetes.io/component: sentry
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  selector:
    app: dapr-sentry
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 443
    targetPort: 50001
    name: grpc
# Added for backwards compatibility where previous clients will attempt to
# connect on port 80.

  - protocol: TCP
    port: 80
    targetPort: 50001
    name: legacy
---
# Source: dapr/charts/dapr_sidecar_injector/templates/dapr_sidecar_injector_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dapr-sidecar-injector
  namespace: default
  labels:
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  selector:
    app: dapr-sidecar-injector
  type: ClusterIP
  ports:
  - port: 443
    targetPort: https
    protocol: TCP
    name: https
---
# Source: dapr/charts/dapr_operator/templates/dapr_operator_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapr-operator
  namespace: default
  labels:
    app: dapr-operator
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dapr-operator
  template:
    metadata:
      labels:
        app: dapr-operator
        app.kubernetes.io/component: operator
        app.kubernetes.io/managed-by: helm
        app.kubernetes.io/name: my-release
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.13.4
      annotations:
        dapr.io/control-plane: operator
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      containers:
      - name: dapr-operator
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/operator:1.13.4"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 6500
        - name: metrics
          containerPort: 9090
          protocol: TCP
        resources:
          {}
        volumeMounts:
        - name: dapr-trust-bundle
          mountPath: /var/run/secrets/dapr.io/tls
          readOnly: true
        - name: dapr-identity-token
          mountPath: /var/run/secrets/dapr.io/sentrytoken
          readOnly: true
        # This is not needed in debug mode because the root FS is writable
        - name: dapr-operator-tmp
          mountPath: /tmp
        command:
        - "/operator"
        args:
        - "--watch-interval"
        - "0"
        - "--max-pod-restarts-per-minute"
        - "20"
        - "--log-level"
        - "info"
        - "--trust-anchors-file"
        - "/var/run/secrets/dapr.io/tls/ca.crt"
        - "--enable-metrics"
        - "--metrics-port"
        - "9090"
      serviceAccountName: dapr-operator
      volumes:
        - name: dapr-operator-tmp
          emptyDir:
            sizeLimit: 2Mi
            medium: Memory
        - name: dapr-trust-bundle
          configMap:
            name: dapr-trust-bundle
        - name: dapr-identity-token
          projected:
            sources:
            - serviceAccountToken:
                path: token
                expirationSeconds: 600
                audience: "spiffe://cluster.local/ns/default/dapr-sentry"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                    - linux
---
# Source: dapr/charts/dapr_sentry/templates/dapr_sentry_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapr-sentry
  namespace: default
  labels:
    app: dapr-sentry
    app.kubernetes.io/component: sentry
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dapr-sentry
  template:
    metadata:
      labels:
        app: dapr-sentry
        app.kubernetes.io/component: sentry
        app.kubernetes.io/managed-by: helm
        app.kubernetes.io/name: my-release
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.13.4
      annotations:
        dapr.io/control-plane: sentry
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      containers:
      - name: dapr-sentry
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/sentry:1.13.4"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 50001
        - name: metrics
          containerPort: 9090
          protocol: TCP
        resources:
          {}
        volumeMounts:
          - name: credentials
            mountPath: /var/run/secrets/dapr.io/credentials
            readOnly: true
        command:
        - "/sentry"
        args:
        - "--log-level"
        - info
        - "--enable-metrics"
        - "--metrics-port"
        - "9090"
        - "--trust-domain"
        - cluster.local
      serviceAccountName: dapr-sentry
      volumes:
        - name: credentials
          secret:
            secretName: dapr-trust-bundle
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                    - linux
---
# Source: dapr/charts/dapr_sidecar_injector/templates/dapr_sidecar_injector_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapr-sidecar-injector
  namespace: default
  labels:
    app: dapr-sidecar-injector
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dapr-sidecar-injector
  template:
    metadata:
      labels:
        app: dapr-sidecar-injector
        app.kubernetes.io/component: sidecar-injector
        app.kubernetes.io/managed-by: helm
        app.kubernetes.io/name: my-release
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.13.4
      annotations:
        dapr.io/control-plane: injector
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      serviceAccountName: dapr-injector
      containers:
      - name: dapr-sidecar-injector
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/injector:1.13.4"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        command:
        - "/injector"
        args:
        - "--log-level"
        - info
        - "--enable-metrics"
        - "--metrics-port"
        - "9090"
        - "--healthz-port"
        - "8080"
        ports:
        - name: https
          containerPort: 4000
          protocol: TCP
        - name: metrics
          containerPort: 9090
          protocol: TCP
        resources:
          {}
        volumeMounts:
        - name: dapr-trust-bundle
          mountPath: /var/run/secrets/dapr.io/tls
          readOnly: true
        - name: dapr-identity-token
          mountPath: /var/run/secrets/dapr.io/sentrytoken
          readOnly: true
      volumes:
      - name: dapr-trust-bundle
        configMap:
          name: dapr-trust-bundle
      - name: dapr-identity-token
        projected:
          sources:
          - serviceAccountToken:
              path: token
              expirationSeconds: 600
              audience: "spiffe://cluster.local/ns/default/dapr-sentry"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
---
# Source: dapr/charts/dapr_placement/templates/dapr_placement_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dapr-placement-server
  namespace: default
  labels:
    app: dapr-placement-server
    app.kubernetes.io/component: placement
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
spec:
  replicas: 1
  serviceName: dapr-placement-server
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: dapr-placement-server
  template:
    metadata:
      labels:
        app: dapr-placement-server
        app.kubernetes.io/component: placement
        app.kubernetes.io/managed-by: helm
        app.kubernetes.io/name: my-release
        app.kubernetes.io/part-of: dapr
        app.kubernetes.io/version: 1.13.4
      annotations:
        dapr.io/control-plane: placement
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/"
    spec:
      containers:
      - name: dapr-placement-server
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 5
        image: "ghcr.io/dapr/placement:1.13.4"
        imagePullPolicy: IfNotPresent
        resources:
          {}
        volumeMounts:
          - name: dapr-trust-bundle
            mountPath: /var/run/secrets/dapr.io/tls
            readOnly: true
          - name: dapr-identity-token
            mountPath: /var/run/secrets/dapr.io/sentrytoken
        ports:
          - containerPort: 50005
            name: api
          - containerPort: 8201
            name: raft-node
          - name: metrics
            containerPort: 9090
            protocol: TCP
        command:
        - "/placement"
        args:
        - "--log-level"
        - info
        - "--enable-metrics"
        - "--replicationFactor"
        - "100"
        - "--max-api-level"
        - "10"
        - "--min-api-level"
        - "0"
        - "--metrics-port"
        - "9090"
        - "--tls-enabled"
        - "--trust-domain=cluster.local"
        - "--trust-anchors-file=/var/run/secrets/dapr.io/tls/ca.crt"
        - "--sentry-address=dapr-sentry.default.svc.cluster.local:443"
        - "--mode=kubernetes"
        securityContext:
          runAsUser: 0
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      serviceAccountName: dapr-placement
      volumes:
      - name: dapr-trust-bundle
        configMap:
          name: dapr-trust-bundle
      - name: dapr-identity-token
        projected:
          sources:
          - serviceAccountToken:
              path: token
              expirationSeconds: 600
              audience: "spiffe://cluster.local/ns/default/dapr-sentry"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
                - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                    - linux
---
# Source: dapr/charts/dapr_sidecar_injector/templates/dapr_sidecar_injector_webhook_config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: dapr-sidecar-injector
  labels:
    app: dapr-sidecar-injector
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/name: my-release
    app.kubernetes.io/part-of: dapr
    app.kubernetes.io/version: 1.13.4
webhooks:
- name: sidecar-injector.dapr.io
  reinvocationPolicy: IfNeeded
  clientConfig:
    service:
      namespace: default
      name: dapr-sidecar-injector
      path: "/mutate"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    resources:
    - pods
    operations:
    - CREATE
  failurePolicy: Ignore
  sideEffects: None
  admissionReviewVersions: ["v1", "v1beta1"]
